?? ??? 200?, PHP 5.3.0 Alpha 3
- Upgraded bundled PCRE to version 7.8. (Nuno)
- Upgraded bundled sqlite to version 3.6.2. (Scott)

- Moved ext/msql to PECL. (Derick, Lukas)

- Changed error level E_ERROR into E_WARNING in Soap extension methods
  parameter validation. (Felipe)
- Changed openssl info to show the shared library version number. (Scott)

- Added stream_cast() and stream_set_options() to user-space stream wrappers,
  allowing stream_select(), stream_set_blocking(), stream_set_timeout() and 
  stream_set_write_buffer() to work with user-space stream wrappers. (Arnaud)
- Added header_remove() function. (chsc at peytz dot dk, Arnaud)
- Added stream_context_get_params() function. (Arnaud)
- Added optional parameter "new" to sybase_connect() (Timm)
- Added parse_ini_string() function. (grange at lemonde dot fr, Arnaud) 
- Added str_getcsv() function. (Sara)
- Added ability to send user defined HTTP headers with SOAP request.
  (Brian J.France, Dmitry)
- Added concatenation option to bz2.decompress stream filter.
  (Keisial at gmail dot com, Greg)
- Added support for using compressed connections with PDO_mysql. (Johannes)
- Implemented FR #46595 (Use cc as the default compiler). (David Soria Parra)
- Implemented FR #46513 (Missing compiler flags for suncc). 
  (David Soria Parra)

- Deprecated define_syslog_variables(). (Kalle)
- Deprecated ereg extension. (Felipe)

- Fixed bug causing the algorithm parameter of mhash() to be modified. (Scott)
- Fixed invalid calls to free when internal fileinfo magic file is used. (Scott)
- Fixed memory leak inside wddx_add_vars() function. (Felipe)
- Synced changes from libmagic 4.26 to bundled libmagic. (Scott)

- Fixed bug #46578 (strip_tags() does not honor end-of-comment when it 
  encounters a single quote). (Felipe)
- Fixed bug #46546 (Segmentation fault when using declare statement with
  non-string value). (Felipe)
- Fixed bug #46421 (SplFileInfo not correctly handling /). (Etienne)