@@ -134,6 +134,8 @@ struct _zend_compiler_globals {
 
 	zval      *current_namespace;
 	HashTable *current_import;
+	zend_bool  in_namespace;
+	zend_bool  has_bracketed_namespaces;
 
 	HashTable *labels;
 	zend_stack labels_stack;
